--- a/MD/kulinerin/app/src/main/res/layout/fragment_profile.xml
+++ b/MD/kulinerin/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".navigation.profile.ProfileFragment">
+    tools:context=".ui.navigation.profile.ProfileFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -79,6 +79,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:background="@drawable/btn_fill"
+            android:clickable="true"
+            android:focusable="true"
             android:gravity="center"
             android:padding="10dp"
             android:text="@string/log_out"
