--- a/MD/kulinerin/app/src/main/res/drawable/ic_to_detail.xml
+++ b/MD/kulinerin/app/src/main/res/drawable/ic_to_detail.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="10dp" />
-            <solid android:color="@color/orange_alpha" />
+            <solid android:color="@color/orange" />
         </shape>
     </item>
     <item
