--- a/MD/kulinerin/app/src/main/res/layout/row_city.xml
+++ b/MD/kulinerin/app/src/main/res/layout/row_city.xml
@@ -30,6 +30,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:id="@+id/btn_city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_to_detail"
