--- a/MD/kulinerin/app/src/main/res/values/colors.xml
+++ b/MD/kulinerin/app/src/main/res/values/colors.xml
@@ -11,5 +11,5 @@
     <color name="gray">#9F9F9F</color>
     <color name="gray_alpha">#e8e8e8</color>
     <color name="orange">#EB8002</color>
-    <color name="orange_alpha">#fcefde</color>
+    <color name="orange_100">#f3c083</color>
 </resources>
