--- a/MD/kulinerin/app/src/main/res/layout/activity_detail_food.xml
+++ b/MD/kulinerin/app/src/main/res/layout/activity_detail_food.xml
@@ -3,96 +3,101 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="20dp"
-    app:cardCornerRadius="18dp"
-    app:strokeColor="@color/orange"
-    app:strokeWidth="3dp"
-    android:layout_gravity="center"
-    tools:context=".ui.navigation.food.DetailFoodActivity">
+    android:layout_height="match_parent"
+    tools:context=".ui.food.DetailFoodActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:foreground="@drawable/btn_unfill"
-        android:outlineAmbientShadowColor="@color/orange"
-        android:outlineSpotShadowColor="@color/orange"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="6dp"
-        app:contentPadding="20dp"
-        android:layout_margin="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp">
 
-            <ImageView
-                android:id="@+id/detail_img_food"
-                android:layout_width="378dp"
-                android:layout_height="235dp"
-                android:layout_margin="8dp"
-                android:layout_marginTop="36dp"
-                android:adjustViewBounds="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:src="@tools:sample/avatars" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_desc_food"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="6dp"
+            app:cardMaxElevation="8dp"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/detail_tv_food"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="132dp"
-                android:paddingTop="5dp"
-                android:text="@string/food_name"
-                android:textColor="@color/orange"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/detail_img_food"
-                app:layout_constraintVertical_bias="0.0" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/detail_tv_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/description"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.143"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/detail_tv_food"
-                app:layout_constraintVertical_bias="0.104" />
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/card_img"
+                    android:layout_width="match_parent"
+                    android:layout_height="210dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="0dp">
 
-            <TextView
-                android:id="@+id/detail_tv_recipe"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/recipe"
-                android:textColor="@color/orange"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.054"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/detail_img_food"
-                app:layout_constraintVertical_bias="0.697" />
+                    <ImageView
+                        android:id="@+id/detail_img_food"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        tools:src="@tools:sample/avatars" />
 
-            <TextView
-                android:id="@+id/detail_tv_recipe_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/recipe_list"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.186"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/detail_img_food"
-                app:layout_constraintVertical_bias="1.0" />
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/detail_tv_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:text="@string/description"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/detail_tv_recipe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:text="@string/recipe"
+            android:textColor="@color/orange"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_desc_food" />
+
+        <TextView
+            android:id="@+id/detail_tv_recipe_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/recipe_list"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detail_tv_recipe" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_location_restaurant"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/btn_fill"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/restaurant"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:icon="@drawable/ic_baseline_location_on_24"
+            app:iconGravity="textStart"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detail_tv_recipe_list" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
