--- a/MD/kulinerin/app/src/main/res/layout/activity_onboarding.xml
+++ b/MD/kulinerin/app/src/main/res/layout/activity_onboarding.xml
@@ -57,6 +57,7 @@
             android:background="@drawable/btn_fill"
             android:padding="12dp"
             android:text="@string/log_in"
+            android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="16sp"
@@ -74,6 +75,7 @@
             android:padding="12dp"
             android:text="@string/sign_up"
             android:textAllCaps="false"
+            android:textAlignment="center"
             android:textColor="@color/orange"
             android:textSize="16sp"
             android:textStyle="bold"
