--- a/MD/kulinerin/app/src/main/res/layout/activity_result_camera.xml
+++ b/MD/kulinerin/app/src/main/res/layout/activity_result_camera.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.camera.ResultCameraActivity">
+    tools:context=".ui.navigation.camera.ResultCameraActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -21,16 +21,14 @@
             app:srcCompat="@drawable/img_placeholder" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_analysis"
+            android:id="@+id/btn_predict"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/btn_fill"
-            android:clickable="true"
-            android:focusable="true"
             android:gravity="center"
             android:padding="10dp"
-            android:text="@string/analysis"
+            android:text="@string/predict"
             android:textAllCaps="false"
             android:textSize="16sp"
             android:textStyle="bold"
