--- a/MD/kulinerin/app/src/main/res/layout/row_food.xml
+++ b/MD/kulinerin/app/src/main/res/layout/row_food.xml
@@ -2,57 +2,60 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="18dp"
-    app:strokeColor="@color/orange"
-    app:strokeWidth="3dp">
+    android:layout_margin="8dp"
+    app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="190dp"
-        android:layout_height="match_parent"
-        android:background="@color/orange_alpha">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/orange_100"
+        app:cardCornerRadius="10dp">
 
-        <ImageView
-            android:id="@+id/img_food"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/img_card"
             android:layout_width="match_parent"
             android:layout_height="180dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:layout_margin="8dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/img_food"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                tools:src="@tools:sample/avatars" />
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tv_food"
-            android:layout_width="100sp"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="15sp"
+            android:layout_marginVertical="14dp"
+            android:layout_marginStart="18dp"
             android:text="@string/food_name"
-            android:textAlignment="center"
-            android:textColor="@color/orange"
+            android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/img_food"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/img_food"
-            app:layout_constraintTop_toBottomOf="@+id/img_food"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintStart_toStartOf="@+id/img_card"
+            app:layout_constraintTop_toBottomOf="@+id/img_card" />
 
         <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginVertical="14dp"
+            android:layout_marginEnd="18dp"
             android:background="@drawable/ic_to_detail"
             app:layout_constraintBottom_toBottomOf="@+id/tv_food"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_food"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="@+id/tv_food" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </com.google.android.material.card.MaterialCardView>
