--- a/MD/kulinerin/app/src/main/res/layout/activity_login.xml
+++ b/MD/kulinerin/app/src/main/res/layout/activity_login.xml
@@ -92,6 +92,7 @@
             app:passwordToggleEnabled="true">
 
             <EditText
+                android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_edit_text"
@@ -102,6 +103,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:id="@+id/btn_log_in"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
