--- a/MD/kulinerin/app/src/main/res/layout/activity_result_camera.xml
+++ b/MD/kulinerin/app/src/main/res/layout/activity_result_camera.xml
@@ -11,20 +11,31 @@
         android:layout_height="wrap_content"
         android:padding="20dp">
 
-        <ImageView
-            android:id="@+id/preview_img"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_img"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/img_placeholder" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/preview_img"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/img_placeholder"/>
+
+        </androidx.cardview.widget.CardView>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_predict"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="32dp"
             android:background="@drawable/btn_fill"
             android:gravity="center"
             android:padding="10dp"
@@ -36,7 +47,7 @@
             app:iconGravity="textStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/preview_img" />
+            app:layout_constraintTop_toBottomOf="@+id/card_img" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
