--- a/MD/kulinerin/app/src/main/res/layout/activity_detail_food.xml
+++ b/MD/kulinerin/app/src/main/res/layout/activity_detail_food.xml
@@ -70,7 +70,7 @@
             app:layout_constraintTop_toBottomOf="@+id/card_desc_food" />
 
         <TextView
-            android:id="@+id/detail_tv_recipe_list"
+            android:id="@+id/tv_recipe_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -96,8 +96,7 @@
             app:iconGravity="textStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/detail_tv_recipe_list" />
-
+            app:layout_constraintTop_toBottomOf="@+id/tv_recipe_list" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
