--- a/MD/kulinerin/app/src/main/res/layout/activity_login.xml
+++ b/MD/kulinerin/app/src/main/res/layout/activity_login.xml
@@ -76,6 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:textColorHint="@color/gray"
+            app:hintEnabled="false"
             app:boxStrokeWidth="0dp"
             app:boxStrokeWidthFocused="0dp"
             app:layout_constraintEnd_toEndOf="parent"
